syntax = "proto3";

package pb;

service Lorem {
    rpc Word(WordRequest) returns (WordResponse) {}
    rpc Sentence(SentenceRequest) returns (SentenceResponse) {}
    rpc Paragraph(ParagraphRequest) returns (ParagraphResponse) {}
}

message WordRequest {
    int32 min = 1;
    int32 max = 2;
}

message WordResponse {
    string message = 1;
}

message SentenceRequest {
    int32 min = 1;
    int32 max = 2;
}

message SentenceResponse {
    string message = 1;
}

message ParagraphRequest {
    int32 min = 1;
    int32 max = 2;
}

message ParagraphResponse {
    string message = 1;
}